  try my best to fix it in the next version.

* Implement the new scheme of handling classwt in classification.

* Allow categorical predictors with more than 32 categories.

* Use more compact storage of proximity matrix.

* Allow case weights by using the weights in sampling?

========================================================================
Change in 4.6-5:

* Minor bug fix for drawing samples in classification that was introduced 
  in 4.6-4.  (Thanks to Joran Elias for reporting.)

Changes in 4.6-4:

* Changed the error condition added in 4.6-3 to the case when there are fewer
  than two classes present in the in-bag sample.
  
Changes in 4.6-3:

* Fixed bugs in the tie-breaking code in various places.  (Thanks to 
  Abhishek Jaiantilal and Nathan Longbotham for the report and Abhishek 
  for the fix.)
  
* Throw error if some class has no data after 10 sampling attempts in
  classification.  (Thanks to Abhishek Jaiantilal for the report.)

Changes in 4.6-2:

* Part of the enhancement in 4.5-37 causes segfault in R-2.12.x.  That part
  has been reverted to the older code for the time being while the problem
  is investigated further.

Changes in 4.6-1:

* The package now includes the rfcv() function for feature selection.  See
  the reference in the help page for details.

* predict.randomForest() was not retaining names of observations in some
  cases.

Changes in 4.5-37:

* Many repeated calls to predict.randomForest() should run faster, thanks
  to Philip Pham and Rory Martin who pointed out some unnecessary overhead.

Changes in 4.5-36:

* outlier() now works when the input matrix to randomForest() has no
  row names.  (Reported by Rau Carrio Gaspar.)

* na.roughfix() is now much faster on some data (fixed based on idea from
  Hadley Wickham; problem reported by Mike Williamson.)

* Corrected typos in the description of categorical splits in ?getTree.

Changes in 4.5-35:

* Fixed an error in partialPlot.randomForest().  Now the partial