@@ -1,8 +1,8 @@
 Package: randomForest
 Title: Breiman and Cutler's random forests for classification and
         regression
-Version: 4.6-5
-Date: 2012-01-04
+Version: 4.6-6
+Date: 2012-01-06
 Depends: R (>= 2.5.0), stats
 Suggests: RColorBrewer, MASS
 Author: Fortran original by Leo Breiman and Adele Cutler, R port by Andy Liaw and Matthew Wiener.
@@ -10,6 +10,6 @@ Description: Classification and regression based on a forest of trees using rand
 Maintainer: Andy Liaw <andy_liaw@merck.com>
 License: GPL (>= 2)
 URL: http://stat-www.berkeley.edu/users/breiman/RandomForests
-Packaged: 2012-01-04 17:07:51 UTC; liawand
+Packaged: 2012-01-06 14:15:31 UTC; liawand
 Repository: CRAN
-Date/Publication: 2012-01-04 17:18:29
+Date/Publication: 2012-01-06 20:58:31
